--- a/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
+++ b/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
@@ -449,6 +449,6 @@
     <value>..\Resources\SettingsApps.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="SettingsSystem" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SettingsSystem.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Resources\SettingsEnvironment.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
