--- a/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
+++ b/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
@@ -451,4 +451,13 @@
   <data name="SettingsSystem" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SettingsEnvironment.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="deploy_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Scripts\deploy.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="SettingsEnvironment" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SettingsEnvironment.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="SettingsHousekeepingStorage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SettingsHousekeepingStorage.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
