--- a/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
+++ b/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
@@ -457,4 +457,7 @@
   <data name="SettingsHousekeepingStorage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SettingsHousekeepingStorage.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="HomeAnalytics" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HomeAnalytics.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
