--- a/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
+++ b/src/MultiPlug.Ext.Thm.Default2016/Properties/Resources.resx
@@ -463,4 +463,7 @@
   <data name="Authentication" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Authentication.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SettingsPermissions" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SettingsPermissions.cshtml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
